fixed categories icons not showing and did some cleanup

--- a/src/app/containers/category/category.component.scss
+++ b/src/app/containers/category/category.component.scss
@@ -1,6 +1,6 @@
 .category-icon {
-  width: 128px;
-  height: 128px;
+  margin-right: 8px;
+  height: 24px;
   object-fit: cover;
   object-position: center;
 }
